# RemoteControl

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  RemoteControl.sln  appveyor.yml
RemoteControl/: Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  CommandReader.cpp  CommandReader.h  MouseControl.cpp  MouseControl.h  Program.cpp  Program.h  README.md  RemoteControl.vcxproj  RemoteControl.vcxproj.filters  ServerConnection.cpp  ServerConnection.h  WinUtility.h
include/: Command.h  CommandManager.h  CommandReader.h  IncludeCore.h  MouseControl.h  Program.h  Server.h  ServerConnection.h  WinUtility.h
lib/: .gitignore
lib/boost/stage/lib/: libboost_atomic-vc140-mt-1_63.lib  libboost_atomic-vc140-mt-gd-1_63.lib  libboost_chrono-vc140-mt-1_63.lib  libboost_chrono-vc140-mt-gd-1_63.lib  libboost_container-vc140-mt-1_63.lib  libboost_container-vc140-mt-gd-1_63.lib  libboost_context-vc140-mt-1_63.lib  libboost_context-vc140-mt-gd-1_63.lib  libboost_coroutine-vc140-mt-1_63.lib  libboost_coroutine-vc140-mt-gd-1_63.lib  libboost_date_time-vc140-mt-1_63.lib  libboost_date_time-vc140-mt-gd-1_63.lib  libboost_exception-vc140-mt-1_63.lib  libboost_exception-vc140-mt-gd-1_63.lib  libboost_fiber-vc140-mt-1_63.lib  libboost_filesystem-vc140-mt-1_63.lib  libboost_iostreams-vc140-mt-1_63.lib  libboost_iostreams-vc140-mt-gd-1_63.lib  libboost_math_c99-vc140-mt-1_63.lib  libboost_math_c99-vc140-mt-gd-1_63.lib  libboost_math_c99f-vc140-mt-1_63.lib  libboost_math_c99f-vc140-mt-gd-1_63.lib  libboost_math_c99l-vc140-mt-1_63.lib  libboost_math_c99l-vc140-mt-gd-1_63.lib  libboost_numpy-vc140-mt-1_63.lib  libboost_numpy3-vc140-mt-1_63.lib  libboost_prg_exec_monitor-vc140-mt-1_63.lib  libboost_prg_exec_monitor-vc140-mt-gd-1_63.lib  libboost_random-vc140-mt-1_63.lib  libboost_random-vc140-mt-gd-1_63.lib  libboost_signals-vc140-mt-1_63.lib  libboost_system-vc140-mt-1_63.lib  libboost_system-vc140-mt-gd-1_63.lib  libboost_thread-vc140-mt-1_63.lib  libboost_thread-vc140-mt-gd-1_63.lib  libboost_timer-vc140-mt-1_63.lib  libboost_timer-vc140-mt-gd-1_63.lib  libboost_type_erasure-vc140-mt-1_63.lib  libboost_type_erasure-vc140-mt-gd-1_63.lib
src/: Command.cpp  CommandManager.cpp  CommandReader.cpp  MouseControl.cpp  Program.cpp  Server.cpp  ServerConnection.cpp  WinUtility.cpp  main.cpp
test/: test_main.cpp
